--- a/package.json
+++ b/package.json
@@ -120,7 +120,8 @@
     "react-router-dom": "^5.1.2",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
+    "redux-actions": "^2.6.5",
+    "redux-promise": "^0.6.0",
     "styled-components": "^4.4.1"
   },
   "author": "",
